06-manutencao/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: manutencao
  namespace: homologacao
  labels:
    app: manutencao

spec:
  replicas: 2
  selector:
    matchLabels:
      app: manutencao

  template:
    metadata:
      labels:
        app: manutencao

    spec:
      containers:
        - name: manutencao
          image: httpd:latest

          resources:
            limits:
              cpu: 150m
              memory: 150Mi
            requests:
              cpu: 100m
              memory: 50Mi

          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 80

          volumeMounts:
            - mountPath: /usr/local/apache2/htdocs
              name: manutencao-pvc
  
      volumes:
        - name: manutencao-pvc
          persistentVolumeClaim:
            claimName: manutencao-pvc

#      nodeSelector:
#        traefik: "true"

---
